--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -548,6 +548,11 @@ set(SRC
   intern/subdiv_inline.hh
 )
 
+if(MSVC_CLANG)
+    message(STATUS "Enabling _USE_MATH_DEFINES for ClangCL")
+    set_source_files_properties(intern/ocean_spectrum.cc PROPERTIES COMPILE_FLAGS -D_USE_MATH_DEFINES)
+  endif()
+
 set(LIB
   PRIVATE bf::animrig
   bf_asset_system
