--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -103,7 +103,7 @@ jobs:
         echo "timestamp_file=${{ env.build_dir }}\timestamps.txt" >> ${{ github.env }}
         echo "lib_file=${{ env.tag_name }}-lib-$m.7z" >> ${{ github.env }}
         echo "lfs_file=${{ env.tag_name }}-lfs.7z" >> ${{ github.env }}
-        echo "build_file=${{ env.tag_name }}-build-$m.7z"" >> ${{ github.env }}
+        echo "build_file=${{ env.tag_name }}-build-$m.7z" >> ${{ github.env }}
 
     - name: Check if LFS and previous build tag exists
       id: check_tag
