--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -181,7 +181,7 @@ jobs:
     - name: Create LFS archive
       if: env.built_guard == 'false' && steps.check_tag.outputs.exists == 'false' && github.repository == env.src_repo
       run: |
-        $lfsList = lfs.txt
+        $lfsList = "lfs.txt"
         $lfsFiles = git lfs ls-files -n
         if ($lfsFiles.Count -gt 0)
         {
