--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -135,6 +135,7 @@ jobs:
       run: |
         gh release download ${{ env.TAG_NAME }} -R ${{ env.src_repo }} -p *.7z
         7z x *.7z -y
+        echo "cache_hit=true" >> ${{ github.env }}
         rm *.7z
 
     - name: Manual clone lib
@@ -213,7 +214,7 @@ jobs:
         ls $out
 
     - name: Restore source timestamps on cache hit
-      if: steps.cache-primes.outputs.cache-hit == 'true' && env.built_guard == 'false'
+      if: env.cache_hit == 'true' && env.built_guard == 'false'
       run: |
         $timestampFile = "${{ env.timestamp_file }}"
         if (Test-Path $timestampFile) {
