--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -169,7 +169,10 @@ jobs:
         Get-ChildItem -Path `
         "${{ github.workspace }}/build", `
         "${{ github.workspace }}/source", `
-        "${{ github.workspace }}/lib" -Recurse -File -Exclude "${{ env.timestamp_file }}" | ForEach-Object {
+        "${{ github.workspace }}/lib" `
+        -Recurse -File | Where-Object {
+          $_.FullName -ne "${{ env.timestamp_file }}"
+        } | ForEach-Object {
           $relativePath = $_.FullName.Substring("${{ github.workspace }}".Length + 1)
           $lastWrite = $_.LastWriteTime.ToString("o")
           $hash = (Get-FileHash -Path $_.FullName -Algorithm SHA256).Hash
