--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -166,18 +166,19 @@ jobs:
           echo "Cache file exists."
           return
         }
+        $timestampFile = Convert-Path "${{ env.timestamp_file }}"
         Get-ChildItem -Path `
         "${{ github.workspace }}/build", `
         "${{ github.workspace }}/source", `
         "${{ github.workspace }}/lib" `
         -Recurse -File | Where-Object {
-          $_.FullName -ne "${{ env.timestamp_file }}"
+          $_.FullName -ne "$timestampFile"
         } | ForEach-Object {
           $relativePath = $_.FullName.Substring("${{ github.workspace }}".Length + 1)
           $lastWrite = $_.LastWriteTime.ToString("o")
           $hash = (Get-FileHash -Path $_.FullName -Algorithm SHA256).Hash
           "$relativePath|$lastWrite|$hash"
-        } | Out-File -Encoding utf8 "${{ env.timestamp_file }}"
+        } | Out-File -Encoding utf8 "$timestampFile"
 
     - name: Create LFS archive
       if: env.built_guard == 'false' && steps.check_tag.outputs.exists == 'false' && github.repository == env.src_repo
