--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -264,6 +264,9 @@ jobs:
         $timestampFile = Convert-Path "${{ env.timestamp_file }}"
         rm "${{ env.timestamp_file }}"
         Get-ChildItem -Path `
+        "${{ github.workspace }}/assets", `
+        "${{ github.workspace }}/locale", `
+        "${{ github.workspace }}/release", `
         "${{ github.workspace }}/source", `
         "${{ github.workspace }}/lib", `
         "${{ github.workspace }}/build" `
