--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -176,10 +176,10 @@ jobs:
         {
             $lfsFiles | Out-File -Encoding utf8 -Append $lfsList
         }
-        7z a -spf -m0=bcj -m1=zstd -mx11 -mtm- `
+        7z a -spf -m0=bcj -m1=zstd -mx11 `
         ${{ env.lfs_file }} `
         "@$lfsList"
-        7z a -m0=bcj -m1=zstd -mx11 -mtm- `
+        7z a -m0=bcj -m1=zstd -mx11 `
         ${{ env.lib_file }} `
         "lib"
 
