--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -35,12 +35,13 @@ jobs:
 
     - name: Setup 7zip zstd
       run: |
-        $f = "Codecs-x64.7z"
-        $p = "C:\Program Files\7-Zip\Codecs"
+        $f = "7z25.01-zstd-x64.exe"
+        curl -fLJO https://github.com/mcmilk/7-Zip-zstd/releases/download/v25.01-v1.5.7-R1/$f
+        ./$f /S
+        $p = "C:\Program Files\7-Zip"
         $o = "a.tar.zst"
         $t = "test"
-        curl -fLJO https://github.com/mcmilk/7-Zip-zstd/releases/latest/download/$f
-        7z x $f "-o$p"
+        # 7z x $f "-o$p"
         7z i
         7z a -m0=zstd -mx11 $o $p
         7z x $o "-o$t"
