--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -37,7 +37,9 @@ jobs:
       run: |
         $f = "7z25.01-zstd-x64.exe"
         curl -fLJO https://github.com/mcmilk/7-Zip-zstd/releases/download/v25.01-v1.5.7-R1/$f
-        ./$f /S
+        & ./$f /S
+        ls "C:\Program Files"
+        exit 1
         $p = "C:\Program Files\7-Zip"
         $o = "a.tar.zst"
         $t = "test"
