--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -45,7 +45,7 @@ jobs:
         # 
         7z i
         $p = "C:\Program Files\7-Zip"
-        $o = "a.tar.zst"
+        $o = "a.zst"
         $t = "test"
         7z a -m0=zstd -mx11 $o $p
         7z x $o "-o$t"
