--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -39,18 +39,15 @@ jobs:
         curl -fLJO https://github.com/mcmilk/7-Zip-zstd/releases/download/v25.01-v1.5.7-R1/$f
         & ./$f /S
         $pf = "C:\Program Files"
-        ls $pf
         mv "$pf/7-Zip" "$pf/7-Zip1"
         mv "$pf/7-Zip-Zstandard" "$pf/7-Zip"
-        # 
         7z i
         $p = "C:\Program Files\7-Zip"
         $o = "a.7z"
         $t = "test"
-        7z a -m0=bcj -m1=zstd -mx21 -mtm- $o $p
+        7z a -m0=bcj -m1=zstd -mx11 -mtm- $o $p
         7z x $o "-o$t"
         ls $t
-        exit 1
 
     - name: Checkout
       uses: actions/checkout@main
@@ -121,9 +118,9 @@ jobs:
       run: |
         $m = "${{ runner.os }}-${{ matrix.arch }}"
         echo "timestamp_file=${{ env.build_dir }}\timestamps.txt" >> ${{ github.env }}
-        echo "lib_file=${{ env.tag_name }}-lib-$m.tar.zst" >> ${{ github.env }}
-        echo "lfs_file=${{ env.tag_name }}-lfs.tar.zst" >> ${{ github.env }}
-        echo "build_file=${{ env.tag_name }}-build-$m.tar.zst" >> ${{ github.env }}
+        echo "lib_file=${{ env.tag_name }}-lib-$m.7z" >> ${{ github.env }}
+        echo "lfs_file=${{ env.tag_name }}-lfs.7z" >> ${{ github.env }}
+        echo "build_file=${{ env.tag_name }}-build-$m.7z" >> ${{ github.env }}
 
     - name: Check if LFS and previous build tag exists
       id: check_tag
@@ -187,13 +184,12 @@ jobs:
         {
             $lfsFiles | Out-File -Encoding utf8 -Append $lfsList
         }
-        7z a -spf -m0 -mx11 `
+        7z a -spf -m0=zstd -mx11 -mtm- `
         ${{ env.lfs_file }} `
         "@$lfsList"
-        7z a -m0 -mx11 `
+        7z a -m0=bcj -m1=zstd -mx11 -mtm- `
         ${{ env.lib_file }} `
         "lib"
-        7z l -ttar ${{ env.lfs_file }}
 
     - name: Upload LFS archive
       if: env.built_guard == 'false' && steps.check_tag.outputs.exists == 'false' && github.repository == env.src_repo
